--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.1",
     "mysql2": "^3.15.2",
     "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.3"
+    "sequelize-cli": "^6.6.3",
+    "winston": "^3.18.3"
   }
 }
