--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
     "dotenv": "^17.2.3",
